<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data></data>

    <RelativeLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_bg"
        tools:context="in.wingstud.grocitoseller.activity.EditPost">

        <include
            layout="@layout/toolbar"
            android:id="@+id/toolbar"/>

        <androidx.core.widget.NestedScrollView
            android:layout_below="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:layout_margin="@dimen/_3sdp"
                android:background="@drawable/rounded_corner_white_bg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp">
                <TextView
                    android:padding="@dimen/_3sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/product_name"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>
                <EditText
                    android:id="@+id/productNameEt"
                    android:background="@drawable/grey_rounded_border"
                    android:hint="@string/enter_product_name"
                    android:textSize="15sp"
                    android:singleLine="true"
                    android:padding="@dimen/_5sdp"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_marginTop="@dimen/_10sdp"
                    android:padding="@dimen/_3sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/brand_name"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>
                <LinearLayout
                    android:orientation="vertical"
                    android:padding="@dimen/_3sdp"
                    android:background="@drawable/grey_rounded_border"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Spinner
                        android:id="@+id/brandSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </LinearLayout>
                <TextView
                    android:layout_marginTop="@dimen/_10sdp"
                    android:padding="@dimen/_3sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/product_description"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>
                <EditText
                    android:id="@+id/productDesEt"
                    android:background="@drawable/grey_rounded_border"
                    android:hint="@string/product_description"
                    android:textSize="15sp"
                    android:gravity="start"
                    android:minLines="5"
                    android:padding="@dimen/_5sdp"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_marginTop="@dimen/_10sdp"
                    android:padding="@dimen/_3sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/main_category"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>
                <LinearLayout
                    android:orientation="vertical"
                    android:padding="@dimen/_3sdp"
                    android:background="@drawable/grey_rounded_border"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Spinner
                        android:id="@+id/mainCatSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </LinearLayout>
                <TextView
                    android:layout_marginTop="@dimen/_10sdp"
                    android:padding="@dimen/_3sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sub_category"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>
                <LinearLayout
                    android:orientation="vertical"
                    android:padding="@dimen/_3sdp"
                    android:background="@drawable/grey_rounded_border"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Spinner
                        android:id="@+id/subCatSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </LinearLayout>
                <TextView
                    android:layout_marginTop="@dimen/_10sdp"
                    android:padding="@dimen/_3sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/price_and_unit"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>
                <ImageView
                    android:layout_gravity="end"
                    android:id="@+id/addIg"
                    android:src="@drawable/ic_add_black_24dp"
                    android:tint="@color/green"
                    android:background="@drawable/grey_rounded_border"
                    android:layout_width="25dp"
                    android:gravity="center"
                    android:layout_height="25dp"/>
                <LinearLayout
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/weightEt"
                        android:background="@drawable/grey_rounded_border"
                        android:textColor="@color/black"
                        android:text="@string/weight"
                        android:textSize="15sp"
                        android:padding="@dimen/_5sdp"
                        android:paddingStart="@dimen/_10sdp"
                        android:paddingEnd="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:gravity="center"
                        android:singleLine="true"
                        android:layout_marginEnd="5dp"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:textColor="@color/black"
                        android:id="@+id/priceEt"
                        android:background="@drawable/grey_rounded_border"
                        android:text="@string/price"
                        android:textSize="15sp"
                        android:padding="@dimen/_5sdp"
                        android:paddingStart="@dimen/_10sdp"
                        android:paddingEnd="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:singleLine="true"
                        android:layout_marginEnd="5dp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>
                    <TextView

                        android:textColor="@color/black"
                        android:id="@+id/offerEt"
                        android:background="@drawable/grey_rounded_border"
                        android:text="@string/discount"
                        android:textSize="15sp"
                        android:padding="@dimen/_5sdp"
                        android:paddingStart="@dimen/_10sdp"
                        android:paddingEnd="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:singleLine="true"
                        android:layout_marginEnd="5dp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:textColor="@color/black"
                        android:singleLine="true"
                        android:id="@+id/qtyEt"
                        android:background="@drawable/grey_rounded_border"
                        android:text="@string/qty"
                        android:textSize="15sp"
                        android:padding="@dimen/_5sdp"
                        android:paddingStart="@dimen/_10sdp"
                        android:paddingEnd="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_marginEnd="5dp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/priceUnitRv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:itemCount="1"
                    tools:listitem="@layout/price_unit_item"/>
                <TextView
                    android:layout_marginTop="@dimen/_10sdp"
                    android:padding="@dimen/_3sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gst"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>
                <EditText
                    android:id="@+id/gstEt"
                    android:background="@drawable/grey_rounded_border"
                    android:hint="@string/gst"
                    android:textSize="15sp"
                    android:singleLine="true"
                    android:padding="@dimen/_5sdp"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:visibility="gone"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:padding="@dimen/_3sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/select_color"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/colorRv"
                    android:visibility="gone"
                    android:background="@drawable/gray_rounded_bg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:itemCount="1"
                    tools:listitem="@layout/color_select_item"/>
                <TextView
                    android:layout_marginTop="@dimen/_10sdp"
                    android:padding="@dimen/_3sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/images"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:id="@+id/selectImageLL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="@dimen/_10sdp"
                    android:background="@drawable/grey_border">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_add_inside_circle"/>
                    <TextView
                        android:layout_marginTop="@dimen/_5sdp"
                        android:padding="@dimen/_3sdp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/click_to_select_files"
                        android:textStyle="bold"/>
                </LinearLayout>
                <androidx.recyclerview.widget.RecyclerView
                    android:layout_marginTop="@dimen/_5sdp"
                    android:id="@+id/selectImageRV"
                    android:background="@drawable/gray_rounded_bg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:itemCount="1"
                    tools:listitem="@layout/select_image_item"/>

                <Button
                    android:id="@+id/submitProductBtn"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:text="@string/submit_product"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:background="@drawable/rounded_color_primary_btn_bg"/>


            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </RelativeLayout>

</layout>
