<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data></data>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="shopinpager.wingstud.shopinpagerseller.activity.PerviousPayment">
        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"/>
        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:background="@color/white"
            android:padding="@dimen/_5sdp"
            android:paddingStart="@dimen/_15sdp"
            android:paddingEnd="@dimen/_15sdp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/payment_amount"

                android:gravity="start"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_16"/>
            <TextView
                android:id="@+id/amountTv"
                style="@style/normal_text_view"
                android:text=" Rs. 0"
                android:gravity="start"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_16"/>
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_5"
            app:cardCornerRadius="@dimen/dp_5"
            app:cardElevation="@dimen/dp_5">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_10"
                android:gravity="center"
                android:orientation="horizontal">
                <TextView
                    style="@style/normal_text_view"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/no"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_14"/>

                <TextView
                    android:textStyle="bold"
                    android:gravity="center"
                    android:id="@+id/dateTV"
                    style="@style/normal_text_view"
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:text="@string/date"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_14"/>

                <TextView
                    android:textStyle="bold"
                    style="@style/normal_text_view"
                    android:text="@string/admin_commission"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_14"/>
                <TextView
                    android:textStyle="bold"
                    android:gravity="center"
                    style="@style/normal_text_view"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:textColor="@color/black"
                    android:text="@string/payable_amount"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/paymentPerRV"/>

    </LinearLayout>
</layout>